add week 16 files

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -194,7 +194,7 @@
 
     <div class="top">
       <div class="profile">
-        <img src="Spongebob.png" alt="Profiil">
+        <img src="spongebob.png" alt="Profiil">
         <div class="profile-info">
           <h2><%= cv.nimi %> <%= cv.perekonnanimi %></h2>
           <div class="contact-row"><%= cv.asukoht %></div>
@@ -241,7 +241,7 @@
           <% }) %>
         </div>
 
-        <img id="carousel-img" class="chart-img" src="image 1.png" alt="Pilt">
+        <img id="carousel-img" class="chart-img" src="image1.png" alt="Pilt">
         <div class="social"></div>
       </div>
 
@@ -271,10 +271,10 @@
           </div>
           <div class="social">
             <a href="https://instagram.com" target="_blank">
-              <img src="Instagram Button.png" alt="Instagram">
+              <img src="instanupp.png" alt="Instagram">
             </a>
             <a href="https://facebook.com" target="_blank">
-              <img src="Facebooki ikoon.png" alt="Facebook">
+              <img src="fbikoon.png" alt="Facebook">
             </a>
           </div>
         </div>
@@ -284,8 +284,8 @@
 
 <script>
     const images = [
-      "image 1.png",
-      "image 2.png",
+      "image1.png",
+      "image2.png",
     ];
 
     let index = 0;
